REST-APIへのアクセスにHttpClientを使うように